--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,3 +3,4 @@ RUN conda install -c conda-forge jupyterhub networkx pandas numpy bqplot colour 
 RUN pip install git+https://github.com/fpom/pytl.git
 RUN pip install git+https://github.com/fpom/cunf-ptnet-py3
 RUN pip install git+https://forge.ibisc.univ-evry.fr/cthomas/pyits_model_checker.git
+RUN pip install git+https://github.com/fpom/ecco.git
