fixed installation procedure

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -1,3 +1,5 @@
+VERSION=$$(git tag|tail -n1)
+
 remote:
 	docker run -p 8000:8000 franckpommereau/ecco jupyterhub
 
@@ -8,12 +10,16 @@ build:
 	cp -af ../doc .
 	docker build -t ecco .
 	rm -rf doc
+	docker tag ecco ecco:${VERSION}
 
 rebuild:
 	cp -af ../doc .
 	docker build --no-cache -t ecco .
 	rm -rf doc
+	docker tag ecco ecco:${VERSION}
 
 push:
 	docker tag ecco franckpommereau/ecco
 	docker push franckpommereau/ecco
+	docker tag ecco:${VERSION} franckpommereau/ecco:${VERSION}
+	docker push franckpommereau/ecco:${VERSION}
